--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ theme_settings:
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     Personal tech blog covering web development and linux tips by Jeremy Moore
+     Tech blog covering web development and linux tips
   header_text_feature_image: assets/img/pexels/triangular.jpeg
   footer_text: >
   #  Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
